--- a/src/app/layouts/navbar/navbar.component.scss
+++ b/src/app/layouts/navbar/navbar.component.scss
@@ -1,20 +1,32 @@
 /* Navbar */
 
-@import '../../styles';
+@import "../../../styles";
 /* Navbar */
 
 .navbar {
   font-family: $type-2;
   background: $blue-teal-gradient;
-  transition: background $action-transition-duration $action-transition-timing-function;
-  -webkit-transition: background $action-transition-duration $action-transition-timing-function;
-  -moz-transition: background $action-transition-duration $action-transition-timing-function;
-  -ms-transition: background $action-transition-duration $action-transition-timing-function;
+  transition: background $action-transition-duration
+    $action-transition-timing-function;
+  -webkit-transition: background $action-transition-duration
+    $action-transition-timing-function;
+  -moz-transition: background $action-transition-duration
+    $action-transition-timing-function;
+  -ms-transition: background $action-transition-duration
+    $action-transition-timing-function;
   .navbar-brand-wrapper {
-    transition: width $action-transition-duration $action-transition-timing-function, background $action-transition-duration $action-transition-timing-function;
-    -webkit-transition: width $action-transition-duration $action-transition-timing-function, background $action-transition-duration $action-transition-timing-function;
-    -moz-transition: width $action-transition-duration $action-transition-timing-function, background $action-transition-duration $action-transition-timing-function;
-    -ms-transition: width $action-transition-duration $action-transition-timing-function, background $action-transition-duration $action-transition-timing-function;
+    transition: width $action-transition-duration
+        $action-transition-timing-function,
+      background $action-transition-duration $action-transition-timing-function;
+    -webkit-transition: width $action-transition-duration
+        $action-transition-timing-function,
+      background $action-transition-duration $action-transition-timing-function;
+    -moz-transition: width $action-transition-duration
+        $action-transition-timing-function,
+      background $action-transition-duration $action-transition-timing-function;
+    -ms-transition: width $action-transition-duration
+        $action-transition-timing-function,
+      background $action-transition-duration $action-transition-timing-function;
     background: $sidebar-light-bg;
     width: $sidebar-width-lg;
     height: $navbar-height;
@@ -49,10 +61,14 @@
     }
   }
   .navbar-menu-wrapper {
-    transition: width $action-transition-duration $action-transition-timing-function;
-    -webkit-transition: width $action-transition-duration $action-transition-timing-function;
-    -moz-transition: width $action-transition-duration $action-transition-timing-function;
-    -ms-transition: width $action-transition-duration $action-transition-timing-function;
+    transition: width $action-transition-duration
+      $action-transition-timing-function;
+    -webkit-transition: width $action-transition-duration
+      $action-transition-timing-function;
+    -moz-transition: width $action-transition-duration
+      $action-transition-timing-function;
+    -ms-transition: width $action-transition-duration
+      $action-transition-timing-function;
     color: $white;
     padding-left: 15px;
     padding-right: 15px;
@@ -100,7 +116,7 @@
           }
           &.nav-btn {
             .btn {
-              background: rgba($white, .1);
+              background: rgba($white, 0.1);
               padding: 0.75rem 1rem;
               color: $white;
             }
@@ -152,7 +168,7 @@
   }
 }
 
-@media (max-width:991px) {
+@media (max-width: 991px) {
   .navbar {
     &.default-layout {
       flex-direction: row;
