--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
       <div class="nav-link">
         <div class="user-wrapper">
           <div class="profile-image">
-            <img src="assets/images/faces/face1.jpg" alt="profile image">
+            <img src="assets/images/faces/face1.jpg" alt="profile image" />
           </div>
           <div class="text-wrapper">
             <p class="profile-name">Richard V.Welsh</p>
@@ -14,103 +14,156 @@
             </div>
           </div>
         </div>
-        <button class="btn btn-success btn-block">New Project
+        <button class="btn btn-success btn-block">
+          New Project
           <i class="mdi mdi-plus"></i>
         </button>
       </div>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/dashboard"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-television"></i>
         <span class="menu-title">Dashboard</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/forms" routerLinkActive="active">
+      <a class="nav-link" routerLink="/modules/forms" routerLinkActive="active">
         <i class="menu-icon mdi mdi-notification-clear-all"></i>
         <span class="menu-title">Form elements</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/buttons" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/buttons"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-dna"></i>
         <span class="menu-title">Buttons</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/progressbar" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/progressbar"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-trackpad"></i>
         <span class="menu-title">Progress bar</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/carousel" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/carousel"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-texture"></i>
         <span class="menu-title">Carousal</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/tooltips" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/tooltips"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-content-copy"></i>
         <span class="menu-title">Tooltip</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/tabs" routerLinkActive="active">
+      <a class="nav-link" routerLink="/modules/tabs" routerLinkActive="active">
         <i class="menu-icon mdi mdi-lightbulb-outline"></i>
         <span class="menu-title">Tabs</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/dropdowns" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/dropdowns"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-backup-restore"></i>
         <span class="menu-title">Dropdown</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/breadcrumbs" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/breadcrumbs"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-flag-outline"></i>
         <span class="menu-title">Breadcrumb</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/pagination" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/pagination"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-loupe"></i>
         <span class="menu-title">Pagination</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/tables" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/tables"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-table"></i>
         <span class="menu-title">Tables</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/alerts" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/alerts"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-shield-outline"></i>
         <span class="menu-title">Alerts</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/accordions" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/accordions"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-altimeter"></i>
         <span class="menu-title">Accordion</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/badges" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/badges"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-checkbox-multiple-blank-circle-outline"></i>
         <span class="menu-title">Badges</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/icons" routerLinkActive="active">
+      <a class="nav-link" routerLink="/modules/icons" routerLinkActive="active">
         <i class="menu-icon mdi mdi-chart-bubble"></i>
         <span class="menu-title">Icons</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/typography" routerLinkActive="active">
+      <a
+        class="nav-link"
+        routerLink="/modules/typography"
+        routerLinkActive="active"
+      >
         <i class="menu-icon mdi mdi-format-italic"></i>
         <span class="menu-title">Typography</span>
       </a>
