--- a/src/app/layouts/sidebar/sidebar.component.scss
+++ b/src/app/layouts/sidebar/sidebar.component.scss
@@ -1,6 +1,6 @@
 /* Sidebar */
 
-@import '../../styles';
+@import "../../../styles";
 .sidebar {
   min-height: calc(100vh - #{$navbar-height});
   background: $sidebar-light-bg;
@@ -8,10 +8,18 @@
   padding: 0;
   width: $sidebar-width-lg;
   z-index: 11;
-  transition: width $action-transition-duration $action-transition-timing-function, background $action-transition-duration $action-transition-timing-function;
-  -webkit-transition: width $action-transition-duration $action-transition-timing-function, background $action-transition-duration $action-transition-timing-function;
-  -moz-transition: width $action-transition-duration $action-transition-timing-function, background $action-transition-duration $action-transition-timing-function;
-  -ms-transition: width $action-transition-duration $action-transition-timing-function, background $action-transition-duration $action-transition-timing-function;
+  transition: width $action-transition-duration
+      $action-transition-timing-function,
+    background $action-transition-duration $action-transition-timing-function;
+  -webkit-transition: width $action-transition-duration
+      $action-transition-timing-function,
+    background $action-transition-duration $action-transition-timing-function;
+  -moz-transition: width $action-transition-duration
+      $action-transition-timing-function,
+    background $action-transition-duration $action-transition-timing-function;
+  -ms-transition: width $action-transition-duration
+      $action-transition-timing-function,
+    background $action-transition-duration $action-transition-timing-function;
   .nav {
     overflow: hidden;
     flex-wrap: nowrap;
@@ -124,10 +132,10 @@
       }
     }
     &:not(.sub-menu) {
-      >.nav-item {
+      > .nav-item {
         &:hover {
           &:not(.nav-profile) {
-            >.nav-link {
+            > .nav-link {
               background: $sidebar-light-menu-hover-bg;
               color: $sidebar-light-menu-hover-color;
             }
@@ -154,7 +162,7 @@
           }
         }
         &:hover {
-          >.nav-link {
+          > .nav-link {
             background: $sidebar-light-submenu-hover-bg;
             color: $sidebar-light-submenu-hover-color;
             &:before {
